--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,10 +5,17 @@
 # 3. Change default post/page authors in config.yml
 #
 # Resource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
-phlow: # replace this with your info
-  name: "Phlow"
-  siterole: "webmaster, developer, copywriter, designer"
-  uri: http://phlow.de/
+# phlow: # replace this with your info
+  # name: "Phlow"
+  # siterole: "webmaster, developer, copywriter, designer"
+  # uri: http://phlow.de/
+  # email:
+  # twitter: "@phlow"
+
+jbheron: # replace this with your info
+  name: "Jess Heron"
+  siterole: "technical writer, developer"
+  uri: http://jbheron.com/
   email:
-  twitter: "@phlow"
+  # twitter: "@jessheron"
 # you can add more authors here
