--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,9 @@ author: jbheron
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://victoriaheron.github.io/home'
+# url: 'https://victoriaheron.com'
 baseurl: ''
+
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
@@ -38,7 +39,7 @@ improve_content: https://github.com/victoriaheron/home/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://phlow.github.io/feeling-responsive/images/'
+urlimg: 'https://victoriaheron.github.io/feeling-responsive/images/'
 
 
 # Logo size is 600x80 pixels
