--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -3,7 +3,7 @@
 # everytime you work locally on the project, you start both config-files, overwriting
 # the first one with the development variables needed.
 #
-# Start development with › $ jekyll serve --config _config.yml,_config_dev.yml
+# Start development with: $ jekyll serve --config _config.yml,_config_dev.yml --incremental
 
 url: 		'http://localhost:4000'
 baseurl: 	''
