--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ urlimg: 'https://victoriaheron.github.io/assets/images/'
 
 
 # Logo size is 600x80 pixels
-logo: "bird-of-paradise1.jpg"
+logo: "logo.png"
 
 # Gems
 gems:
