--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -13,6 +13,11 @@
   class: icon-facebook
   title: "Facebook"
 
+- name: Instagram
+  url: http://instagram.com/victoriaheronyoga
+  class: icon-instagram
+  title: "Instagram"
+
 # - name: Twitter
 #   url: http://twitter.com/phlow
 #   class: icon-twitter
@@ -31,11 +36,6 @@
 # - name: Soundcloud
 #   url: http://soundcloud.com/
 #   class: icon-soundcloud
-#   title: ""
-
-# - name: Instagram
-#   url: http://instagram.com/
-#   class: icon-instagram
 #   title: ""
 
 # - name: Pinterest
