--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,6 +16,6 @@ jbheron: # replace this with your info
   name: "Jess Heron"
   siterole: "technical writer, developer"
   uri: http://jbheron.com/
-  email:
+  # email:
   # twitter: "@jessheron"
 # you can add more authors here
