corrects favicon paths

--- a/_config.yml
+++ b/_config.yml
@@ -157,25 +157,25 @@ bing_webmastertools_id:    '0FB4C028ABCF07C908C54386ABD2D97F'
 #   /_/    \__,_/ |___/_/\___/\____/_/ /_/____/   Favicon-Crap: Favicons, Chrome, Android & Apple Touch Buttons
 #                                                 More information » https://mathiasbynens.be/notes/touch-icons
 
-favicon-32x32:                          './images/favico.ico'
+favicon-32x32:                          'favico.ico'
 # touch-icon-192x192:                     'touch-icon-192x192.png'
-touch-icon-192x192:                     './images/female-yoga-pose-silhouette-3-152-245206.png'
+touch-icon-192x192:                     'female-yoga-pose-silhouette-3-152-245206.png'
 # apple-touch-icon-180x180-precomposed:   'apple-touch-icon-180x180-precomposed.png'
-apple-touch-icon-180x180-precomposed:   './images/female-yoga-pose-silhouette-3-152-245206.png'
+apple-touch-icon-180x180-precomposed:   'female-yoga-pose-silhouette-3-152-245206.png'
 # apple-touch-icon-152x152-precomposed:   'apple-touch-icon-152x152-precomposed.png'
-apple-touch-icon-152x152-precomposed:   './images/female-yoga-pose-silhouette-3-152-245206.png'
+apple-touch-icon-152x152-precomposed:   'female-yoga-pose-silhouette-3-152-245206.png'
 # apple-touch-icon-144x144-precomposed:   'apple-touch-icon-144x144-precomposed.png'
-apple-touch-icon-144x144-precomposed:   './images/female-yoga-pose-silhouette-3-144-245206.png'
+apple-touch-icon-144x144-precomposed:   'female-yoga-pose-silhouette-3-144-245206.png'
 # apple-touch-icon-120x120-precomposed:   'apple-touch-icon-120x120-precomposed.png'
-apple-touch-icon-120x120-precomposed:   './images/female-yoga-pose-silhouette-3-120-245206.png'
+apple-touch-icon-120x120-precomposed:   'female-yoga-pose-silhouette-3-120-245206.png'
 # apple-touch-icon-114x114-precomposed:   'apple-touch-icon-114x114-precomposed.png'
-apple-touch-icon-114x114-precomposed:   './images/female-yoga-pose-silhouette-3-114-245206.png'
+apple-touch-icon-114x114-precomposed:   'female-yoga-pose-silhouette-3-114-245206.png'
 # apple-touch-icon-76x76-precomposed:     'apple-touch-icon-76x76-precomposed.png'
-apple-touch-icon-76x76-precomposed:     './images/female-yoga-pose-silhouette-3-72-245206.png'
+apple-touch-icon-76x76-precomposed:     'female-yoga-pose-silhouette-3-72-245206.png'
 # apple-touch-icon-72x72-precomposed:     'apple-touch-icon-72x72-precomposed.png'
-apple-touch-icon-72x72-precomposed:     './images/female-yoga-pose-silhouette-3-72-245206.png'
+apple-touch-icon-72x72-precomposed:     'female-yoga-pose-silhouette-3-72-245206.png'
 # apple-touch-icon-precomposed:           'apple-touch-icon-precomposed.png'
-apple-touch-icon-precomposed:           './images/female-yoga-pose-silhouette-3-57-245206.png'
+apple-touch-icon-precomposed:           'female-yoga-pose-silhouette-3-57-245206.png'
 msapplication_tilecolor:                '#fabb00'
 # Everything Else
 
