--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author: jbheron
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 # url: 'https://victoriaheron.com'
-baseurl: ''
+baseurl: 'victoriaheron.com'
 
 
 # This is for the editing function in _/includes/improve_content
