--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,9 +1,12 @@
-#
 # This config-file is only needed for development. Instead of changing the url
 # everytime you work locally on the project, you start both config-files, overwriting
 # the first one with the development variables needed.
 #
 # Start development with: $ jekyll serve --config _config.yml,_config_dev.yml --incremental
+
+# For prod, `$ jekyll build` and copy _deploy contents to github folder.
+source:      _source
+destination: _deploy
 
 url: 		'http://localhost:4000'
 baseurl: 	''
@@ -24,3 +27,4 @@ sass:
 
 # Disable when not in production
 google_analytics_tracking_id: false
+
