--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -2,7 +2,7 @@
 # everytime you work locally on the project, you start both config-files, overwriting
 # the first one with the development variables needed.
 #
-# Start development with: $ jekyll serve --config _config.yml,_config_dev.yml --incremental
+# Start development with: `$ jekyll serve --config _config.yml,_config_dev.yml --incremental`
 
 # To modify production, run `$ jekyll build` and copy file contents of source repo to the 'victoriaheron.github.io' repo. Contents of destination should represent a similar website to what the contents of the source repo will build in production by Github:
 
