--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -6,8 +6,8 @@
 
 # To modify production, run `$ jekyll build` and copy file contents of source repo to the 'victoriaheron.github.io' repo. Contents of destination should represent a similar website to what the contents of the source repo will build in production by Github:
 
-source:      '~/workspace/jekyll_victoriaheron.com' # While Github ignores this value, we set it to this repo for clarity
-destination: '~/workspace/victoriaheron.github_site' # Keeps _site out of source control for development
+source:      '/Users/jheron/workspace/jekyll_victoriaheron.com' # While Github ignores this value, we set it to this repo for clarity
+destination: '/Users/jheron/workspace/victoriaheron.github_site' # Keeps _site out of source control for development
 
 # production build repository: '~workspace/victoriaheron.github.io' 
 # production build branch: 'master'
